# Local-Gemma

./: .gitignore  CMakeLists.txt  DEVELOPMENT.md  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: build.yml
gradle/: libs.versions.toml
scripts/: install.sh
src/main/cpp/: llama_jni.cpp
src/main/kotlin/com/localgemma/api/: OpenAiModels.kt  OpenAiServer.kt
src/main/kotlin/com/localgemma/cli/: LocalGemma.kt
src/main/kotlin/com/localgemma/config/: AppConfig.kt  ConfigManager.kt
src/main/kotlin/com/localgemma/inference/: GenerationParams.kt  InferenceEngine.kt  LlamaCppEngine.kt  LlamaCppNative.kt
src/main/kotlin/com/localgemma/model/: Model.kt  ModelAllowlist.kt  ModelDownloader.kt  ModelRegistry.kt
src/main/resources/: model_allowlist.json
